--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Delani Studio</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1 class="text-white text-center welcome h-text">Welcome</h1>
+                <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
+                <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
+                    ENVIRONMENT</h6>
+             
+            </div>
+        </div>
+    </div>
 </body>
 </html>
