add div for the description with logo of the site.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <title>Delani Studio</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h1 class="text-white text-center welcome h-text">Welcome</h1>
-                <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
-                <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
-                    ENVIRONMENT</h6>
-             
-            </div>
-        </div>
+    <div id="hero">
+        <div class="hero-description container mx-auto text-center text-white">
+             <img src="assets/logo/logo.png" alt="">
+             <h5 class="p-3">welcome</h5>
+             <h2>To DELANI STUDIO</h2>
+             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNs IN A FUN ENVIRONMENT</p>
+             <a href="#about"><img src="assets/mouse_click.png"></a>
+         </div>
     </div>
+
 </body>
 </html>
