--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
              <a href="#about"><img src="assets/mouse_click.png"></a>
          </div>
     </div>
-
+    <section id="about" class="container text-center">
+        <h2 class="mb-4">ABOUT US</h2>
+        <p>When you work with us, you are a part of a team of committed collaborators. All aspects of our software development process are integrated, interactive and agile</p>
+        <p>Our approach unifies design, development and product management to create exceptional products</p>
+        <p>We start each project by understanding your business goals, the user's needs and the product requirements.
+            Then we help them translate into effective and elegant solutions</p>
+    </section>
 </body>
 </html>
