--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
         <p>We start each project by understanding your business goals, the user's needs and the product requirements.
             Then we help them translate into effective and elegant solutions</p>
     </section>
+    <section id="service" >
+        <div class="container text-center">
+            <h2 class="mb-4">SERVICES</h2>
+            <p>Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.</p>
+            <p>The outcome of this scoping session is a proposal or high level statement of work.</p>
+            <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        </div>
+    </section>
 </body>
 </html>
