--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
             <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         </div>
     </section>
+    <section id="wedo">
+        <div class="container text-center">
+            <h2 class="mb-4">WHAT WE DO</h2>
+            <div class="row">
+                <div class=" col-md-4 text-center ">
+                    <div class="card1">
 </body>
 </html>
