--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class=" col-md-4 text-center ">
                     <div class="card1">
-                        <img class="design" src="img/design_icon.png" alt="">
+                        <img class="design" src="assets/services_icons/design_icon.png" alt="">
                         <h4 class="pt-2 design-title">DESIGN</h4>
                         <p class="design-text">Our design practice offers a full range of services including brand strategy,
                             interaction and
@@ -49,5 +49,6 @@
                             Throughout your project, our designers create and implement visual design and workflows, solicit
                             user feedback and work with you to make sure what gets built is what is needed.</p>
                     </div>
+                </div>
 </body>
 </html>
