--- a/index.html
+++ b/index.html
@@ -50,5 +50,15 @@
                             user feedback and work with you to make sure what gets built is what is needed.</p>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="card2">
+                        <img class = "developement" src="img/dev_icon.png" alt="">
+                        <H4 class="pt-2">DEVELOPEMENT</H4>
+                        <p class="developement-text">All engineers are fluent in the latest enterprise, mobile and web development
+                            technologies.
+                            They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.</p>
+                    </div>
+                </div>
 </body>
 </html>
