add the third column to the product part.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card2">
-                        <img class = "developement" src="img/dev_icon.png" alt="">
+                        <img class = "developement" src="assets/services_icons/dev_icon.png" alt="">
                         <H4 class="pt-2">DEVELOPEMENT</H4>
                         <p class="developement-text">All engineers are fluent in the latest enterprise, mobile and web development
                             technologies.
@@ -60,5 +60,17 @@
                             practices such as test-driven development and pair programming.</p>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="card3">
+                        <img class="product" src="img/product_icon.png" alt="">
+                        <H4 class="pt-2">PRODUCT DESIGN</H4>
+                        <p class="product-text">Planning and development is iterative. Because we are constantly coding and testing,
+                            the products
+                            we build are always ready to go live.
+                            This iterative process allows for changes as business requirements evolve.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
