add the first image and its hover content.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card3">
-                        <img class="product" src="img/product_icon.png" alt="">
+                        <img class="product" src="assets/services_icons/product_icon.png" alt="">
                         <H4 class="pt-2">PRODUCT DESIGN</H4>
                         <p class="product-text">Planning and development is iterative. Because we are constantly coding and testing,
                             the products
@@ -72,5 +72,20 @@
                 </div>
             </div>
         </div>
+    </section>
+    <div id="work" class="text-center">
+        <h2>PORTOFOLIO</h2>
+        <div class=" container-small">
+            <div class="row mt-5">
+                <div class="col-md-3 mb-4">
+                    <div class="portofolio-img">
+                        <img class="responsive-img" src="assets/portfolio/work1.jpg" alt="">
+                        <div>
+                            <div class="portofolio-text" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+
+
 </body>
 </html>
