--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3 mb-4">
+                    <div class="portofolio-img">
+                        <img class="responsive-img" src="assets/portfolio/work2.jpg" alt="">
+                        <div>
+                            <div class="portofolio-text" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
 
 
 </body>
