--- a/index.html
+++ b/index.html
@@ -111,12 +111,22 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="portofolio-img">
-                        <img class="responsive-img" src="img/work5.jpg" alt="">
+                        <img class="responsive-img" src="assets/portfolio/work5.jpg" alt="">
                         <div>
                             <div class="portofolio-text" style="display:none">Delani Studio</div>
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3 mb-4">
+                    <div class="portofolio-img">
+                        <img class="responsive-img" src="assets/portfolio/work6.jpg" alt="">
+                        <div>
+                            <div class="portofolio-text" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+
+
 
 
 
