--- a/index.html
+++ b/index.html
@@ -148,6 +148,39 @@
             </div>
         </div>
     </div>
+    <div id="contact" class="text-center">
+        <h2 class="mt-3 mb-2">CONTACT US</h2>
+        <div class="container">
+            <form action="">
+                <div class="row">
+                    <div class="col-md-6">
+                        <input type="text" name="" id="" placeholder="Name">
+                    </div>
+
+                    <div class="col-md-6">
+                        <input type="text" name="" id="" placeholder="Email">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <textarea name="" id=""  rows="10">your message Here</textarea>
+                        <button type="button" class="btn btn-success">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <section id="footer" class="text-center">
+        <img src="assets/social_icons/behance.png" alt="">
+        <img src="assets/social_icons/dribble.png" alt="">
+        <img src="assets/social_icons/facebook.png" alt="">
+        <img src="assets/social_icons/flickr.png" alt="">
+        <img src="assets/social_icons/g_plus.png" alt="">
+        <img src="assets/social_icons/pinterest.png" alt="">
+        <img src="assets/social_icons/skype.png" alt="">
+        <img src="assets/social_icons/stumble_upon.png" alt="">
+        <img src="assets/social_icons/twitter.png" alt="">
+        <img src="assets/social_icons/you_tube.png" alt="">
 
 
 
