add copyright div.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
         <img src="assets/social_icons/stumble_upon.png" alt="">
         <img src="assets/social_icons/twitter.png" alt="">
         <img src="assets/social_icons/you_tube.png" alt="">
+        <div class="copyright">
+            <p>Delani Studio</p>
+            <p>2019</p>
+        </div>
+    </section>
 
 
 
