style the portfolio images accordingly.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="assets/logo/logo.png" alt="">
             <h5 class="p-3">welcome</h5>
             <h2>To DELANI STUDIO</h2>
-            <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNs IN A FUN ENVIRONMENT</p>
+            <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
             <a href="#about"><img src="assets/mouse_click.png"></a>
         </div>
     </div>
@@ -87,15 +87,7 @@
             <div class="row mt-5">
                 <div class="col-md-3 mb-4">
                     <div class="portofolio-img">
-                        <img class="responsive-img" src="assets/portfolio/work1.jpg" alt="">
-                        <div>
-                            <div class="portofolio-text" style="display:none">Delani Studio</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="portofolio-img">
-                        <img class="responsive-img" src="assets/portfolio/work2.jpg" alt="">
+                        <img class="responsive-img" src="assets/portfolio/work4.jpg" alt="">
                         <div>
                             <div class="portofolio-text" style="display:none">Delani Studio</div>
                         </div>
@@ -111,7 +103,15 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="portofolio-img">
-                        <img class="responsive-img" src="assets/portfolio/work4.jpg" alt="">
+                        <img class="responsive-img" src="assets/portfolio/work2.jpg" alt="">
+                        <div>
+                            <div class="portofolio-text" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="portofolio-img">
+                        <img class="responsive-img" src="assets/portfolio/work1.jpg" alt="">
                         <div>
                             <div class="portofolio-text" style="display:none">Delani Studio</div>
                         </div>
