--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
             <form action="">
                 <div class="row">
                     <div class="col-md-6">
-                        <input type="text" name="" id="" placeholder="Name">
+                        <input type="text" name="" id="name" placeholder="Name">
                     </div>
 
                     <div class="col-md-6">
-                        <input type="text" name="" id="" placeholder="Email">
+                        <input type="text" name="" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <textarea name="" id="" rows="10">your message Here</textarea>
-                        <button type="button" class="btn btn-success">Submit</button>
+                        <textarea name="" id="message" rows="10">your message Here</textarea>
+                        <button type="button" class="btn btn-success" onclick="myFunction()">Submit</button>
                     </div>
                 </div>
             </form>
